# Wast-recognition-and-sorting

./: CMakeLists.txt  README.md  main.cpp
